# SOLVAR

./: .gitignore  README.md  pyproject.toml
cov3d/: covar_sgd.py  dataset.py  fsc_utils.py  poses.py  recovar_utils.py  utils.py  wiener_coords.py  workflow.py
scripts/: chimerax_visuals.py  comet_cryodrgn.py  comet_pipeline.py  compare_recovar_results.py  compute_eigenvecs.py  compute_pose_errors.py  inspect_dataset.py  match_coordinates.py  meta_run.py  relion_refine.py  stars_from_embedding.py
solvar/: analysis_viewer.py  analyze.py  cli.py  covar.py  covar_distributed.py  covar_sgd.py  dataset.py  fsc_utils.py  iterative_covar_sgd.py  logger.py  mean.py  newton_opt.py  nufft_plan.py  poses.py  projection_funcs.py  reconstruct_utils.py  recovar_utils.py  source.py  synthetic_experiment.py  trajectory.py  utils.py  wiener_coords.py  workflow.py
solvar/commands/: analysis_viewer.py  analyze.py  comet_pipeline.py  workflow.py
tests/: test_reconstruction.py  test_torch_impl.py  test_torch_wraps.py  test_wiener_impl.py  utils.py
