[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solvar"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "aspire==0.13.1",
    "click==8.1.8",
    "cufinufft>=2.3.0",
    "finufft>=2.3.0",
    "matplotlib>=3.6.3",
    "numpy==1.26.4",
    "pandas<2",
    "scikit-learn==1.6.1",
    "scipy>=1.15.0",
    "tqdm==4.67.1",
    "umap-learn",
    "cryodrgn>=3.4.0",
    "matplotlib_scalebar==0.9.0",
    "dataframe_image==0.2.7",
    "starfile>=0.5.1",
    "tensorflow==2.19.0",
    "colorlog>=6.9.0",
    "scikit-fmm"
]

[project.optional-dependencies]
dev = [
    "comet_ml==3.48.1",
    "pre-commit"
]

[project.scripts]
solvar = "solvar.cli:main"

[tool.setuptools]
packages = ["solvar"]


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
